--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+/* maybe use for new logo */
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
+}
+
 .App-header {
   background-color: #222;
   height: 50px;
@@ -9,6 +15,7 @@
   color: white;
 }
 
+/* use for new logo */
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
