left padding on header

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* make sure to make it a mobile first approach! */
+
 .App {
   text-align: center;
 }
@@ -13,6 +15,8 @@
   height: 50px;
   padding: 20px;
   color: white;
+  text-align: left;
+  padding-left: 50px;
 }
 
 /* use for new logo */
