putting all styling into one folder

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -1,5 +1,11 @@
 /* make sure to make it a mobile first approach! */
 
+body,
+html {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #341cac;
+}
+
 .App {
   text-align: center;
 }
