removing background color for now

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -3,7 +3,7 @@
 body,
 html {
   font-family: 'Montserrat', sans-serif;
-  background-color: #341cac;
+  /* background-color: #341cac; */
 }
 
 .App {
