adding comments to scss file

--- a/src/styling/all-cards.scss
+++ b/src/styling/all-cards.scss
@@ -1,5 +1,4 @@
-/* Designer credit: https://dribbble.com/shots/1978243-Latest-News */
-
+// scss -pre compiled
 body,
 html {
     overflow-x: hidden;
