--- a/src/styling/cards.css
+++ b/src/styling/cards.css
@@ -18,7 +18,7 @@ html {
 }
 
 .card:hover .button-primary {
-    transform: translate(10px, 0);
+    transform: scale(1.2);
 }
 
 .card-header {
@@ -63,10 +63,6 @@ html {
     transition: .25s;
 }
 
-.button-primary i {
-    padding-right: 4px;
-}
-
 .designer-link {
     color: #fff;
     text-align: center;
@@ -75,7 +71,6 @@ html {
     display: block;
 }
 
-/* Designer credit: https://dribbble.com/shots/1978243-Latest-News */
 body,
 html {
     overflow-x: hidden;
