adding zoom to entire card

--- a/src/styling/cards.css
+++ b/src/styling/cards.css
@@ -1,24 +1,30 @@
 body,
 html {
     font-family: 'Montserrat', sans-serif;
-    background-color: #341cac;
+    /* background-color: #341cac; */
+    background-color: #14ac28;
 }
 
 .card {
     width: 280px;
     display: block;
     margin: 60px auto;
-    box-shadow: 10px 5px 40px 20px #2d1896;
+    box-shadow: 10px 5px 40px 20px #14ac28;
     transition: .25s;
 }
 
 .card:hover {
-    box-shadow: 10px 5px 40px 20px #271580;
+    box-shadow: 10px 5px 20px 10px #0d7a1c;
+}
+
+.zoom:hover,
+.button-primary:hover {
+    transform: scale(1.1);
     cursor: pointer;
 }
 
-.card:hover .button-primary {
-    transform: scale(1.2);
+.zoom {
+    transition: .25s;
 }
 
 .card-header {
