--- a/src/styling/cards.css
+++ b/src/styling/cards.css
@@ -2,19 +2,19 @@ body,
 html {
     font-family: 'Montserrat', sans-serif;
     /* background-color: #341cac; */
-    background-color: #14ac28;
+    background-color: #69CC84;
 }
 
 .card {
     width: 280px;
     display: block;
     margin: 60px auto;
-    box-shadow: 10px 5px 40px 20px #14ac28;
+    box-shadow: 10px 5px 40px 20px #69CC84;
     transition: .45s;
 }
 
 .card:hover {
-    box-shadow: 10px 5px 20px 10px #0d7a1c;
+    box-shadow: 10px 5px 20px 10px #69CC84;
 }
 
 .zoom:hover,
