--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -17,10 +17,10 @@ html {
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #fff;
   height: 50px;
   padding: 20px;
-  color: white;
+  color: #69CC84;
   text-align: left;
   padding-left: 50px;
 }
