adding background color to css

--- a/src/styling/cards2.css
+++ b/src/styling/cards2.css
@@ -10,6 +10,7 @@ html {
     margin: 60px auto;
     box-shadow: 10px 5px 40px 10px rgba(84, 163, 105, 0.575);
     transition: .45s;
+    background-color: #fff;
 }
 
 .card:hover {
