--- a/src/styling/cards2.css
+++ b/src/styling/cards2.css
@@ -5,7 +5,8 @@ html {
 }
 
 .card {
-    width: 280px;
+    width: 300px;
+    height: 375px;
     display: block;
     margin: 60px auto;
     box-shadow: 10px 5px 40px 10px rgba(84, 163, 105, 0.575);
