--- a/src/styling/cards.css
+++ b/src/styling/cards.css
@@ -27,7 +27,7 @@ html {
     width: 100%;
     padding: 15px;
     width: 100%;
-    background-size: cover;
+    background-color: black;
     color: #fff;
 }
 
