--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -19,7 +19,7 @@ html {
   background-color: #fff;
   height: 50px;
   padding: 20px;
-  color: #69CC84;
+  color: #0211C6;
   text-align: left;
   padding-left: 50px;
 }
